on load handlebars will render the blogposts

--- a/views/templates/login.html
+++ b/views/templates/login.html
@@ -3,5 +3,5 @@
   <input type="text" id="username" placeholder="">
   <input type="password" name="password" placeholder="">
   <input type="button" id="log-in" value="Log in">
-  <input type="button" id="sign-in" value="Sign in">
+  <input type="button" id="register" value="Sign in">
 </div>
