--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -5,21 +5,14 @@
     <title>wild-wild-wordpress</title>
   </head>
   <body>
-    {{> header}}
+    {{>header}}
+
     <div id="post-maker">
       <textarea id="create-post" rows="8" cols="40"></textarea>
-      <button type="button" id="send-post"></button>
+      <button type="button" id="send-post">send</button>
     </div>
     <div id="content-wrapper">
-      <div class="post">
-        {{#each post}}
-        <h2>{{this.title}}</h2>
-        <div class="post-body">
-          {{this.content_body}}
-          <p>{{this.date}}</p>
-        </div>
-      </div>
-        {{/each}}
+      <h1>{{{title}}}</h1>
     </div>
 
   </body>
