--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>wild-wild-wordpress</title>
+    <title>Log in</title>
   </head>
   <body>
-    {{{content}}}
+    <h1>Log in with your user</h1>
+    <div id="login-container">
+      <input type="text" id="username" placeholder="">
+      <input type="password" name="password" placeholder="">
+      <input type="button" id="log-in" value="Log in">
+      <input type="button" id="register" value="Sign in">
+    </div>
   </body>
 </html>
