--- a/views/templates/login.html
+++ b/views/templates/login.html
@@ -1,7 +1,16 @@
-<h1>Log in with your user</h1>
-<div id="login-container">
-  <input type="text" id="username" placeholder="">
-  <input type="password" name="password" placeholder="">
-  <input type="button" id="log-in" value="Log in">
-  <input type="button" id="register" value="Sign in">
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Log in</title>
+  </head>
+  <body>
+    <h1>Log in with your user</h1>
+    <div id="login-container">
+      <input type="text" id="username" placeholder="">
+      <input type="password" name="password" placeholder="">
+      <input type="button" id="log-in" value="Log in">
+      <input type="button" id="register" value="Sign in">
+    </div>
+  </body>
+</html>
