makes some changes trying to debug handlebars

--- a/views/layouts/default.html
+++ b/views/layouts/default.html
@@ -2,15 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Log in</title>
+    <title></title>
   </head>
   <body>
-    <h1>Log in with your user</h1>
-    <div id="login-container">
-      <input type="text" id="username" placeholder="">
-      <input type="password" name="password" placeholder="">
-      <input type="button" id="log-in" value="Log in">
-      <input type="button" id="register" value="Sign in">
-    </div>
+    {{{content}}}
   </body>
 </html>
