--- a/views/templates/login.html
+++ b/views/templates/login.html
@@ -7,10 +7,19 @@
   <body>
     <h1>Log in with your user</h1>
     <div id="login-container">
+      Username:
       <input type="text" id="username" placeholder="">
+      <br>
+      <br>
+      Password:
       <input type="password" id="password" placeholder="">
-      <input type="button" id="log-in" value="Log in">
-      <input type="button" id="register" value="Sign in">
+      <br>
+      <br>
+      <button id="log-in">Log in</button>
+      <button id="register">Register</button>
     </div>
+    <script src="index.js"></script>
+    <script src="makeXhrRequest.js"></script>
+
   </body>
 </html>
