--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>wild-wild-wordpress</title>
-  </head>
-  <body>
+
     {{>header}}
+    <p>
+      {{msg}}
+      <a href="/logout/">Logout</a>
+    </p>
+
     <div id="post-maker">
       <textarea id="post-title" rows="2" cols="40"></textarea>
       <textarea id="post-body" rows="8" cols="40"></textarea>
@@ -19,10 +18,6 @@
         <p>{{{content_body}}}</p>
         <p>{{{date_created}}}</p>
 
-    </div>
-      {{/each}}
       </div>
-    <script src="makeXhrRequest.js" charset="utf-8"></script>
-    <script src="index.js" charset="utf-8"></script>
-  </body>
-</html>
+      {{/each}}
+    </div>
