--- a/views/templates/register.html
+++ b/views/templates/register.html
@@ -1,6 +1,6 @@
-    <a href="/register/">Register</a>
+    <a href="/login/">Login</a>
 
-    <h1>Log in with your user</h1>
+    <h1>Register</h1>
     <p>
       {{error}}
     </p>
@@ -8,7 +8,6 @@
       <form class="" action="" method="POST">
         <input type="text" name="username" placeholder="">
         <input type="password" name="password" placeholder="">
-        <input type="submit" value="Log in">
-        <!-- <input type="submit" id="register" value="Register"> -->
+        <input type="submit" value="Register">
       </form>
     </div>
